added openapi spec tool support
